feat : 친구 페이지 기능 추가
친구 추가 및 수락, 거절, 삭제 기능 추가

--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.39.2",
+    "deno": "^0.1.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
@@ -20,6 +24,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "supabase": "^1.127.4",
     "typescript": "^5"
   }
 }
